--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DSUHelper" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.DSUHelper" parent="Theme.Material3.DayNight">
 
         <item name="colorPrimary">@color/system_accent</item>
         <item name="colorPrimaryDark">@color/system_accent_darker</item>
@@ -15,8 +15,10 @@
         <item name="colorSecondaryContainer">@color/system_accent_soft</item>
 
         <item name="android:navigationBarColor">@color/netrual_color_2</item>
-        <item name="android:statusBarColor">@color/netrual_color</item>
-        <item name="android:colorBackground">@color/netrual_color</item>
+        <item name="android:colorBackground">@color/bg</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
 
     </style>
 </resources>
