--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,7 +14,7 @@
         <item name="colorSurface">@color/netrual_color</item>
         <item name="colorSecondaryContainer">@color/system_accent_soft</item>
 
-         <item name="android:navigationBarColor">@color/bg</item>
+         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:colorBackground">@color/bg</item>
 
         <item name="android:statusBarColor">@android:color/transparent</item>
