--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".AboutActivity">
+    tools:context=".old.AboutActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
