--- a/app/src/main/res/layout/activity_run_on_adb.xml
+++ b/app/src/main/res/layout/activity_run_on_adb.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RunOnAdbActivity"
+    tools:context=".old.RunOnAdbActivity"
     android:orientation="vertical"
     android:padding="10dp">
 
