--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,19 +5,20 @@
         <item name="colorPrimary">@color/system_accent</item>
         <item name="colorPrimaryDark">@color/system_accent_darker</item>
         <item name="colorSecondary">@color/system_accent_2</item>
-        <item name="android:colorBackground">@color/background</item>
+
         <item name="colorError">@color/error</item>
 
         <item name="colorPrimaryVariant">@color/system_accent</item>
         <item name="colorSecondaryVariant">@color/system_accent_2</item>
+        <item name="scrimBackground">@color/netrual_color</item>
+
+        <item name="colorSurface">@color/netrual_color</item>
         <item name="colorSecondaryContainer">@color/system_accent_soft</item>
 
-        <item name="scrimBackground">@color/netrual_color</item>
-        <item name="colorSurface">@color/netrual_color</item>
+        <item name="android:colorBackground">@color/background</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
-
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
-    </style>
+        <item name="android:windowLightStatusBar">true</item>
 
+    </style>
 </resources>
